Fixed activity list to not overflow

--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -1,3 +1,23 @@
+
+
+::-webkit-scrollbar {
+    /* width */
+    width: 12px
+}
+
+::-webkit-scrollbar-thumb {
+    /* Handle */
+    background: rgb(110, 110, 110);
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    /* Handle on hover */
+    background: rgb(110, 110, 110);
+}
+
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -12,9 +32,6 @@ code {
     monospace;
 }
 
-.test{
-  margin-top: 50px;
-}
 
 
 .circle {
@@ -73,3 +90,15 @@ code {
   }
 }
 
+.table-container {
+  height: 50rem;
+  overflow-y: scroll;
+}
+
+.activies-form-container{
+  padding:50px
+}
+
+.notification-container{
+  position: absolute;
+}
